some possibly meaningful message

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,20 +9,26 @@ environment:
   sdk: '>=2.18.0 <3.0.0'
 
 dependencies:
+  build_runner: ^2.3.3
   cloud_firestore: ^4.2.0
+  date_time_picker: ^2.1.0
   firebase_storage: ^11.0.8
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.1.1
   flutter_svg: ^1.1.6
+  freezed: ^2.3.2
+  freezed_annotation: ^2.2.0
   image_picker: ^0.8.6
-  intl: ^0.18.0
+  intl: ^0.17.0
+  json_annotation: ^4.7.0
   rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.5.4
 
 flutter:
 
